<?xml version="1.0"?>
<package format="3">
  <name>my_vision_pkg</name>
  <version>0.0.0</version>
  <description>Circle detection using Intel RealSense and OpenCV</description>
  <maintainer email="yt6@todo.todo">yt6</maintainer>
  <license>MIT</license>

  <!-- ビルドツール依存 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- ビルド依存 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclpy</build_depend>

  <!-- 実行依存 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-xarm-sdk</exec_depend>

  <!-- テスト依存 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
